<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>it.pagopa.interop</groupId>
    <artifactId>interop-qa-tests</artifactId>
    <version>0.0.1-SNAPSHOT</version>

    <properties>
        <maven.compiler.source>17</maven.compiler.source>
        <maven.compiler.target>17</maven.compiler.target>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <cucumber.version>7.8.1</cucumber.version>
        <aws.sdk.version>2.20.1</aws.sdk.version>
        <gson.version>2.11.0</gson.version>
        <spring.boot.version>2.5.12</spring.boot.version>
        <swagger.version>1.6.5</swagger.version>
        <findbugs.version>3.0.2</findbugs.version>
        <junit.platform.version>1.9.1</junit.platform.version>
        <lombok.version>1.18.30</lombok.version>
        <cucumber.reporting.version>5.7.2</cucumber.reporting.version>
    </properties>

    <dependencies>
        <!-- AWS SDK: Provides integration with Amazon Web Services, specifically for managing encryption keys using AWS Key Management Service (KMS) -->
        <dependency>
            <groupId>software.amazon.awssdk</groupId>
            <artifactId>kms</artifactId>
            <version>${aws.sdk.version}</version>
        </dependency>

        <!-- Gson: Library for serializing and deserializing Java objects to and from JSON format -->
        <dependency>
            <groupId>com.google.code.gson</groupId>
            <artifactId>gson</artifactId>
            <version>${gson.version}</version>
        </dependency>

        <!-- Spring Boot -->
        <dependency>
            <groupId>org.springframework.boot</groupId>
            <artifactId>spring-boot-starter-web</artifactId>
            <version>${spring.boot.version}</version>
        </dependency>
        <dependency>
            <groupId>org.springframework.boot</groupId>
            <artifactId>spring-boot-starter-test</artifactId>
            <scope>test</scope>
            <version>${spring.boot.version}</version>
        </dependency>

        <!-- Swagger -->
        <dependency>
            <groupId>io.swagger</groupId>
            <artifactId>swagger-annotations</artifactId>
            <version>${swagger.version}</version>
        </dependency>

        <!-- FindBugs Annotations -->
        <dependency>
            <groupId>com.google.code.findbugs</groupId>
            <artifactId>jsr305</artifactId>
            <version>${findbugs.version}</version>
        </dependency>

        <!-- Cucumber -->
        <dependency>
            <groupId>io.cucumber</groupId>
            <artifactId>cucumber-java</artifactId>
            <version>${cucumber.version}</version>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>io.cucumber</groupId>
            <artifactId>cucumber-spring</artifactId>
            <version>${cucumber.version}</version>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>io.cucumber</groupId>
            <artifactId>cucumber-junit-platform-engine</artifactId>
            <version>${cucumber.version}</version>
            <scope>test</scope>
        </dependency>

        <!-- JUnit: Framework for unit testing in Java -->
        <dependency>
            <groupId>org.junit.platform</groupId>
            <artifactId>junit-platform-suite</artifactId>
            <scope>test</scope>
            <version>${junit.platform.version}</version>
        </dependency>

        <!-- Lombok -->
        <dependency>
            <groupId>org.projectlombok</groupId>
            <artifactId>lombok</artifactId>
            <version>${lombok.version}</version>
            <scope>provided</scope>
        </dependency>

        <!-- Cucumber Reporting: Provides support for generating reports from Cucumber tests -->
        <dependency>
            <groupId>net.masterthought</groupId>
            <artifactId>cucumber-reporting</artifactId>
            <version>${cucumber.reporting.version}</version>
            <scope>test</scope>
        </dependency>
    </dependencies>

    <build>
        <plugins>
            <plugin>
                <groupId>org.openapitools</groupId>
                <artifactId>openapi-generator-maven-plugin</artifactId>
                <version>5.4.0</version>
                <executions>
                    <execution>
                        <id>generate-bff-client</id>
                        <goals>
                            <goal>generate</goal>
                        </goals>
                        <phase>process-resources</phase>
                        <configuration>
                            <typeMappings>
                                <typeMapping>OffsetDateTime=java.lang.String</typeMapping>
                            </typeMappings>
                            <inputSpec>https://raw.githubusercontent.com/pagopa/interop-be-monorepo/refs/heads/main/packages/api-clients/open-api/bffApi.yml</inputSpec>
                            <generatorName>java</generatorName>
                            <library>resttemplate</library>
                            <generateApiTests>false</generateApiTests>
                            <generateModelTests>false</generateModelTests>
                            <configOptions>
                                <apiPackage>it.pagopa.interop.generated.openapi.clients.bff.api</apiPackage>
                                <modelPackage>it.pagopa.interop.generated.openapi.clients.bff.model</modelPackage>
                                <dateLibrary>java8</dateLibrary>
                                <annotationLibrary>none</annotationLibrary>
                                <documentationProvider>source</documentationProvider>
                                <openApiNullable>false</openApiNullable>
                                <useAbstractionForFiles>true</useAbstractionForFiles>
                                <useBeanValidation>false</useBeanValidation>
                                <additionalModelTypeAnnotations>
                                    @com.fasterxml.jackson.annotation.JsonInclude(com.fasterxml.jackson.annotation.JsonInclude.Include.NON_NULL)
                                </additionalModelTypeAnnotations>
                            </configOptions>
                            <apiPackage>it.pagopa.interop.generated.openapi.clients.bff.api</apiPackage>
                            <modelPackage>it.pagopa.interop.generated.openapi.clients.bff.model</modelPackage>
                        </configuration>
                    </execution>
                </executions>
            </plugin>
        </plugins>
    </build>

</project>